--- a/04 - JavaScript/Avaliação/estilos.css
+++ b/04 - JavaScript/Avaliação/estilos.css
@@ -26,3 +26,9 @@ footer{
     background-color: darkgreen;
     color: white;
 }
+body{
+    background-image: url(imagens/background.jpg);
+    background-color: rgba(255,255,255,0.8);
+    background-blend-mode: lighten;
+    
+}
