--- a/03 - HTML e CSS/site/estilos.css
+++ b/03 - HTML e CSS/site/estilos.css
@@ -10,7 +10,7 @@
 
 .navbar-brand,
 .navbar-brand:hover{
-    color:white;
+    color:rgba(255, 255, 255, 0.452);
 }
 .titulo{
     text-align: center;
