--- a/05 - JSP/Atividade JSP/src/main/webapp/posts.css
+++ b/05 - JSP/Atividade JSP/src/main/webapp/posts.css
@@ -54,3 +54,38 @@ body {
 #h2addComentario {
 	padding: 30px;
 }
+#h1login {
+	padding-top: 05px;
+	text-align: center;
+}
+
+.split {
+  height: 90%;
+  width: 50%;
+  position: fixed;
+
+
+  overflow-x: hidden;
+  padding-top: 10px;
+}
+
+
+.left {
+  left: 0;
+  background-color: #ffd558;
+}
+
+
+.right {
+  right: 0;
+  background-color: #ffd558;
+}
+
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
